# greasewood

./: .coverage  .dockerignore  .gitignore  .gitlab-ci.yml  Containerfile  LICENSE  MANIFEST.in  PORTING.md  README.md  RUNBOOK.md  SECURITY.md  SECURITY_REVIEW.md  SECURITY_REVIEW2.md  TESTING.md  git_config.sh  grants.toml.example  greasewood.toml.example  install.sh  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: ci.yml  docs.yml  mirror.yml  release.yml
docs/: access-control.md  concepts.md  dev-on-macos.md  index.md  install.md  macos.md  networking.md  nfs.md  operations.md  quickstart.md  reference.md  security.md  tls.md  watch.md
docs/assets/: extra.css
docs/examples/: greasewood-node-alpine.yaml  greasewood-node.yaml  gw-mac-gateway.initd  gw-mac-gateway.nft  gw-mac-gateway.service  gw-mac-gateway.sysctl.conf  gw-mac-net.sh  gw-mac-priv.sh  gw-shim.sh
greasewood/: __main__.py  audit.py  backup.py  ca.py  certs.py  cli.py  config.py  directory.py  door.py  endpoints.py  enroll.py  firewall.py  hosts.py  keys.py  launchd.py  loop.py  narrate.py  platform.py  policy.py  portfilter.py  reconcile.py  renewal.py  server.py  service.py  status.py  sweep.py  sync.py  tlsca.py  trust.py  wg.py  wire.py
greasewood/profiles/: client.toml  haproxy.toml  minio.toml  mosquitto.toml  nats.toml  nginx.toml  postgres.toml  redis.toml
man/: gw.1
packaging/: README.md  build-standalone.sh  nfpm.yaml
packaging/aur/: .SRCINFO  PKGBUILD
packaging/brew/: greasewood.rb
scripts/: ci-distro-bootstrap.sh  deep-tests.sh  gen_manpage.py  release-brew.sh  uninstall.sh
systemd/: greasewood.path  greasewood.service  greasewood@.service
tests/: conftest.py  mac_smoke.sh  test_anchor_transfer.py  test_assignments.py  test_audit.py  test_audit_events.py  test_backup.py  test_ca_concurrency.py  test_ca_drop.py  test_ca_guards.py  test_ca_hostnames.py  test_cert_profiles.py  test_certs.py  test_chaos_model.py  test_cli_backup.py  test_cli_bare.py  test_cli_config.py  test_cli_daemon_fatal.py  test_cli_diagnose.py  test_cli_door_status.py  test_cli_guards.py  test_cli_inbound.py  test_cli_mtu.py  test_cli_policy_edit.py  test_cli_port_enforcement.py  test_cli_purge.py  test_cli_reachability.py  test_cli_renew.py  test_cli_revoke.py  test_cli_service.py  test_cli_status_health.py  test_cli_token.py  test_config.py  test_devin_fixes.py  test_diagnose_scenarios.py  test_directory.py  test_door.py  test_emergent_segments.py  test_endpoints.py  test_enroll_dataplane.py  (+40 more)
tests/deep/: test_deep_directory.py  test_deep_hosts.py  test_deep_narrate_audit.py  test_deep_registry.py  test_deep_wire.py
tests/integration/: conftest.py  helpers.py  test_custom_ports.py  test_diagnose.py  test_expiry_teardown.py  test_groups.py  test_hostname_pin.py  test_hosts_sync.py  test_inbound.py  test_invite_retry.py  test_ipv4_underlay.py  test_menu_invite.py  test_mesh.py  test_monkey.py  test_multi_mesh.py  test_no_nftables.py  test_policy_topology.py  test_port_enforcement.py  test_reboot_survival.py  test_rename.py  test_renewal_survival.py  test_reroot.py  test_revoke_eviction.py  test_segments.py  test_soak.py  test_standing_door.py  test_stress.py  test_succession.py  test_tls_cert.py
tests/integration/chaos/: driver.py  model.py  services.py  verify.py
