[project]
name = "greasewood"
version = "0.1.4"
description = "Minimal self-hosted WireGuard mesh overlay — direct-or-fail, IPv6-only, CA-gated"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "cschlick" }]
keywords = [
    "wireguard", "mesh", "vpn", "overlay-network", "ipv6",
    "certificate-authority", "self-hosted",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=42.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6"]

[project.urls]
Homepage = "https://github.com/cschlick/greasewood"
Repository = "https://github.com/cschlick/greasewood"
Issues = "https://github.com/cschlick/greasewood/issues"

[project.scripts]
gw = "greasewood.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# Pin the package — the repo has other top-level dirs (systemd/, tests/) that
# would otherwise confuse setuptools' flat-layout auto-discovery.
[tool.setuptools]
packages = ["greasewood"]

[tool.setuptools.package-data]
greasewood = ["profiles/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/integration -m 'not deep'"
markers = [
    "integration: requires podman + WireGuard kernel module (run with: pytest tests/integration/)",
    "stress: many-node scale tests, slow + resource-heavy (gated behind GW_STRESS=1)",
    "soak: long-running renewal-cycle endurance test (gated behind GW_SOAK=1)",
    "monkey: randomized many-container chaos test with an oracle (gated behind GW_MONKEY=1)",
    "deep: exhaustive Hypothesis property runs, nightly-sized (run with: HYPOTHESIS_PROFILE=deep pytest tests/deep -m deep)",
]
